--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   },
   "homepage": "https://github.com/JaldinProgrammer/nodejsTemplate#readme",
   "dependencies": {
+    "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "node": "^22.7.0",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "yup": "^1.4.0"
   }
 }
